# Smartslope

./: .gitignore  IMPLEMENTATION_STATUS.md  README.md  pyproject.toml
.github/: CODEOWNERS  REPO_HARDENING_NOTES.md
.github/workflows/: ci.yml
artifacts/: index.json
artifacts/runs/run_20260117_205328/: manifest.json
artifacts/runs/run_20260117_205448/: manifest.json
artifacts/runs/run_20260117_205913/: kegalle_demo_summary.txt  manifest.json
artifacts/runs/run_20260117_214315/: kegalle_demo_summary.txt  manifest.json
artifacts/runs/run_20260117_215154/: manifest.json
artifacts/runs/run_20260117_231638/: manifest.json
artifacts/runs/run_20260118_001333/: manifest.json  report.md
artifacts/runs/run_20260118_010841/: manifest.json  results.md
artifacts/runs/run_20260118_013935/: alarm_log.csv  manifest.json  report.md  results.md
code/: run_all.sh
code/synthetic/scripts/: run_detect.sh  (+1 more)
configs/: ci_demo_3d.json  site_demo_3d.json  site_demo_multi_radar.json
configs/mappings/: example_generic_mapping.json
data/synthetic/: kegalle_demo_run.npz
outputs/synthetic/: detection_summary.txt
scripts/: bundle_run.py  check_unicode_controls.py  publish_run.py  run_pipeline.sh  setup_venv.sh  smoke_run.sh
smartslope/: __init__.py  __main__.py  alarms.py  atmosphere.py  cli.py  dem.py  detect.py  detection.py  geometry_metrics.py  hmi.py  ingest.py  io_npz.py  io_utils.py  math_utils.py  report.py  scada_export.py  scene.py  scene_2d.py  schema.py  sim3d.py  simulate.py  site.py  site_status.py  synthetic.py
smartslope/configs/: kegalle_demo.json
(+19 files in other folders)
