[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smartslope"
version = "0.0.1"
description = "Synthetic data + algorithms for coherent radar slope deformation detection"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7"
]

[project.scripts]
smartslope = "smartslope.__main__:main"

[tool.setuptools.packages.find]
include = ["smartslope*"]
exclude = ["code*", "data*", "outputs*", "scripts*"]
